<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Jonathan Dimond

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="CTW_VIBRATE"
		android:title="@string/vibrate" android:defaultValue="true"></CheckBoxPreference>
	<CheckBoxPreference android:key="CTW_INSISTENT"
		android:title="@string/insistent" android:summary="@string/insistent_desc"
		android:defaultValue="false"></CheckBoxPreference>
	<RingtonePreference android:key="CTW_RINGTONE"
		android:title="@string/alarm_sound" android:showSilent="false"
		android:ringtoneType="alarm|notification" android:showDefault="true" />
	<ListPreference android:key="CTW_REFRESH_INTERVAL"
		android:title="@string/refresh_interval" android:entries="@array/countdown_intervals"
		android:entryValues="@array/integer_countdown_intervals"
		android:defaultValue="1"></ListPreference>
	<Preference android:key="REFRESH_NOTICE" android:title="@string/refresh_notice_title"></Preference>
	<Preference android:key="ABOUT_NOTICE" android:title="@string/about_title"></Preference>
</PreferenceScreen>
